mini_ml/_build/default/parser_files/Parser.automaton
State 0:
## Known stack suffix:
##
## LR(1) items:
main' -> . main [ # ]
## Transitions:
-- On LET shift to state 1
-- On req_list shift to state 132
-- On req shift to state 134
-- On main shift to state 136
## Reductions:

State 1:
## Known stack suffix:
## LET
## LR(1) items:
req -> LET . ID list(ID) EQ expr [ LET EOF ]
req -> LET . REC ID list(ID) EQ expr [ LET EOF ]
## Transitions:
-- On REC shift to state 2
-- On ID shift to state 128
## Reductions:

State 2:
## Known stack suffix:
## LET REC
## LR(1) items:
req -> LET REC . ID list(ID) EQ expr [ LET EOF ]
## Transitions:
-- On ID shift to state 3
## Reductions:

State 3:
## Known stack suffix:
## LET REC ID
## LR(1) items:
req -> LET REC ID . list(ID) EQ expr [ LET EOF ]
## Transitions:
-- On ID shift to state 4
-- On list(ID) shift to state 6
## Reductions:
-- On EQ
--   reduce production list(ID) ->

State 4:
## Known stack suffix:
## ID
## LR(1) items:
list(ID) -> ID . list(ID) [ EQ ]
## Transitions:
-- On ID shift to state 4
-- On list(ID) shift to state 5
## Reductions:
-- On EQ
--   reduce production list(ID) ->

State 5:
## Known stack suffix:
## ID list(ID)
## LR(1) items:
list(ID) -> ID list(ID) . [ EQ ]
## Transitions:
## Reductions:
-- On EQ
--   reduce production list(ID) -> ID list(ID)

State 6:
## Known stack suffix:
## LET REC ID list(ID)
## LR(1) items:
req -> LET REC ID list(ID) . EQ expr [ LET EOF ]
## Transitions:
-- On EQ shift to state 7
## Reductions:

State 7:
## Known stack suffix:
## LET REC ID list(ID) EQ
## LR(1) items:
req -> LET REC ID list(ID) EQ . expr [ LET EOF ]
## Transitions:
-- On TAIL shift to state 8
-- On SUB shift to state 9
-- On STRING shift to state 10
-- On PRINT shift to state 11
-- On NOT shift to state 12
-- On NEG shift to state 13
-- On L_SQ shift to state 14
-- On L_PAR shift to state 20
-- On LET shift to state 32
-- On INT shift to state 36
-- On IF shift to state 37
-- On ID shift to state 38
-- On HEAD shift to state 39
-- On FUN shift to state 40
-- On BOOL shift to state 43
-- On simple_expr shift to state 44
-- On expr shift to state 127
-- On app_expr shift to state 60
## Reductions:

State 8:
## Known stack suffix:
## TAIL
## LR(1) items:
simple_expr -> TAIL . [ THEN TAIL SUB STRING SEMICOLON R_SQ R_PAR PRINT OR NOT NEQ NEG MUL MOD L_SQ L_PAR LT LET LEQ INT IN ID HEAD GT GEQ EQ EOF ELSE DIV CONCAT CAT BOOL APPEND AND ADD ]
## Transitions:
## Reductions:
-- On THEN TAIL SUB STRING SEMICOLON R_SQ R_PAR PRINT OR NOT NEQ NEG MUL MOD L_SQ L_PAR LT LET LEQ INT IN ID HEAD GT GEQ EQ EOF ELSE DIV CONCAT CAT BOOL APPEND AND ADD
--   reduce production simple_expr -> TAIL

State 9:
## Known stack suffix:
## SUB
## LR(1) items:
expr -> SUB . expr [ THEN SUB SEMICOLON R_PAR OR NEQ MUL MOD LT LET LEQ IN GT GEQ EQ EOF ELSE DIV CONCAT CAT APPEND AND ADD ]
## Transitions:
-- On TAIL shift to state 8
-- On SUB shift to state 9
-- On STRING shift to state 10
-- On PRINT shift to state 11
-- On NOT shift to state 12
-- On NEG shift to state 13
-- On L_SQ shift to state 14
-- On L_PAR shift to state 20
-- On LET shift to state 32
-- On INT shift to state 36
-- On IF shift to state 37
-- On ID shift to state 38
-- On HEAD shift to state 39
-- On FUN shift to state 40
-- On BOOL shift to state 43
-- On simple_expr shift to state 44
-- On expr shift to state 117
-- On app_expr shift to state 60
## Reductions:

State 10:
## Known stack suffix:
## STRING
## LR(1) items:
simple_expr -> STRING . [ THEN TAIL SUB STRING SEMICOLON R_SQ R_PAR PRINT OR NOT NEQ NEG MUL MOD L_SQ L_PAR LT LET LEQ INT IN ID HEAD GT GEQ EQ EOF ELSE DIV CONCAT CAT BOOL APPEND AND ADD ]
## Transitions:
## Reductions:
-- On THEN TAIL SUB STRING SEMICOLON R_SQ R_PAR PRINT OR NOT NEQ NEG MUL MOD L_SQ L_PAR LT LET LEQ INT IN ID HEAD GT GEQ EQ EOF ELSE DIV CONCAT CAT BOOL APPEND AND ADD
--   reduce production simple_expr -> STRING

State 11:
## Known stack suffix:
## PRINT
## LR(1) items:
simple_expr -> PRINT . [ THEN TAIL SUB STRING SEMICOLON R_SQ R_PAR PRINT OR NOT NEQ NEG MUL MOD L_SQ L_PAR LT LET LEQ INT IN ID HEAD GT GEQ EQ EOF ELSE DIV CONCAT CAT BOOL APPEND AND ADD ]
## Transitions:
## Reductions:
-- On THEN TAIL SUB STRING SEMICOLON R_SQ R_PAR PRINT OR NOT NEQ NEG MUL MOD L_SQ L_PAR LT LET LEQ INT IN ID HEAD GT GEQ EQ EOF ELSE DIV CONCAT CAT BOOL APPEND AND ADD
--   reduce production simple_expr -> PRINT

State 12:
## Known stack suffix:
## NOT
## LR(1) items:
simple_expr -> NOT . [ THEN TAIL SUB STRING SEMICOLON R_SQ R_PAR PRINT OR NOT NEQ NEG MUL MOD L_SQ L_PAR LT LET LEQ INT IN ID HEAD GT GEQ EQ EOF ELSE DIV CONCAT CAT BOOL APPEND AND ADD ]
## Transitions:
## Reductions:
-- On THEN TAIL SUB STRING SEMICOLON R_SQ R_PAR PRINT OR NOT NEQ NEG MUL MOD L_SQ L_PAR LT LET LEQ INT IN ID HEAD GT GEQ EQ EOF ELSE DIV CONCAT CAT BOOL APPEND AND ADD
--   reduce production simple_expr -> NOT

State 13:
## Known stack suffix:
## NEG
## LR(1) items:
simple_expr -> NEG . [ THEN TAIL SUB STRING SEMICOLON R_SQ R_PAR PRINT OR NOT NEQ NEG MUL MOD L_SQ L_PAR LT LET LEQ INT IN ID HEAD GT GEQ EQ EOF ELSE DIV CONCAT CAT BOOL APPEND AND ADD ]
## Transitions:
## Reductions:
-- On THEN TAIL SUB STRING SEMICOLON R_SQ R_PAR PRINT OR NOT NEQ NEG MUL MOD L_SQ L_PAR LT LET LEQ INT IN ID HEAD GT GEQ EQ EOF ELSE DIV CONCAT CAT BOOL APPEND AND ADD
--   reduce production simple_expr -> NEG

State 14:
## Known stack suffix:
## L_SQ
## LR(1) items:
expr -> L_SQ . loption(separated_nonempty_list(SEMICOLON,atomic_expr)) R_SQ [ THEN SUB SEMICOLON R_PAR OR NEQ MUL MOD LT LET LEQ IN GT GEQ EQ EOF ELSE DIV CONCAT CAT APPEND AND ADD ]
simple_expr -> L_SQ . R_SQ [ THEN TAIL SUB STRING SEMICOLON R_PAR PRINT OR NOT NEQ NEG MUL MOD L_SQ L_PAR LT LET LEQ INT IN ID HEAD GT GEQ EQ EOF ELSE DIV CONCAT CAT BOOL APPEND AND ADD ]
## Transitions:
-- On TAIL shift to state 8
-- On STRING shift to state 10
-- On R_SQ shift to state 15
-- On PRINT shift to state 11
-- On NOT shift to state 12
-- On NEG shift to state 13
-- On L_SQ shift to state 16
-- On L_PAR shift to state 17
-- On INT shift to state 36
-- On ID shift to state 38
-- On HEAD shift to state 39
-- On BOOL shift to state 43
-- On simple_expr shift to state 120
-- On separated_nonempty_list(SEMICOLON,atomic_expr) shift to state 121
-- On loption(separated_nonempty_list(SEMICOLON,atomic_expr)) shift to state 122
-- On atomic_expr shift to state 124
## Reductions:
-- On R_SQ
--   reduce production loption(separated_nonempty_list(SEMICOLON,atomic_expr)) ->
** Conflict on R_SQ

State 15:
## Known stack suffix:
## L_SQ R_SQ
## LR(1) items:
simple_expr -> L_SQ R_SQ . [ THEN TAIL SUB STRING SEMICOLON R_SQ R_PAR PRINT OR NOT NEQ NEG MUL MOD L_SQ L_PAR LT LET LEQ INT IN ID HEAD GT GEQ EQ EOF ELSE DIV CONCAT CAT BOOL APPEND AND ADD ]
## Transitions:
## Reductions:
-- On THEN TAIL SUB STRING SEMICOLON R_SQ R_PAR PRINT OR NOT NEQ NEG MUL MOD L_SQ L_PAR LT LET LEQ INT IN ID HEAD GT GEQ EQ EOF ELSE DIV CONCAT CAT BOOL APPEND AND ADD
--   reduce production simple_expr -> L_SQ R_SQ

State 16:
## Known stack suffix:
## L_SQ
## LR(1) items:
simple_expr -> L_SQ . R_SQ [ THEN TAIL SUB STRING SEMICOLON R_SQ R_PAR PRINT OR NOT NEQ NEG MUL MOD L_SQ L_PAR LT LET LEQ INT IN ID HEAD GT GEQ EQ EOF ELSE DIV CONCAT CAT BOOL APPEND AND ADD ]
## Transitions:
-- On R_SQ shift to state 15
## Reductions:

State 17:
## Known stack suffix:
## L_PAR
## LR(1) items:
atomic_expr -> L_PAR . expr R_PAR [ SEMICOLON R_SQ ]
simple_expr -> L_PAR . ADD R_PAR [ SEMICOLON R_SQ ]
simple_expr -> L_PAR . SUB R_PAR [ SEMICOLON R_SQ ]
simple_expr -> L_PAR . MUL R_PAR [ SEMICOLON R_SQ ]
simple_expr -> L_PAR . DIV R_PAR [ SEMICOLON R_SQ ]
simple_expr -> L_PAR . MOD R_PAR [ SEMICOLON R_SQ ]
simple_expr -> L_PAR . AND R_PAR [ SEMICOLON R_SQ ]
simple_expr -> L_PAR . OR R_PAR [ SEMICOLON R_SQ ]
simple_expr -> L_PAR . EQ R_PAR [ SEMICOLON R_SQ ]
simple_expr -> L_PAR . NEQ R_PAR [ SEMICOLON R_SQ ]
simple_expr -> L_PAR . LT R_PAR [ SEMICOLON R_SQ ]
simple_expr -> L_PAR . GT R_PAR [ SEMICOLON R_SQ ]
simple_expr -> L_PAR . LEQ R_PAR [ SEMICOLON R_SQ ]
simple_expr -> L_PAR . GEQ R_PAR [ SEMICOLON R_SQ ]
simple_expr -> L_PAR . CONCAT R_PAR [ SEMICOLON R_SQ ]
simple_expr -> L_PAR . CAT R_PAR [ SEMICOLON R_SQ ]
simple_expr -> L_PAR . APPEND R_PAR [ SEMICOLON R_SQ ]
simple_expr -> L_PAR . R_PAR [ SEMICOLON R_SQ ]
simple_expr -> L_PAR . expr R_PAR [ SEMICOLON R_SQ ]
## Transitions:
-- On TAIL shift to state 8
-- On SUB shift to state 18
-- On STRING shift to state 10
-- On R_PAR shift to state 21
-- On PRINT shift to state 11
-- On OR shift to state 22
-- On NOT shift to state 12
-- On NEQ shift to state 24
-- On NEG shift to state 13
-- On MUL shift to state 26
-- On MOD shift to state 28
-- On L_SQ shift to state 14
-- On L_PAR shift to state 20
-- On LT shift to state 30
-- On LET shift to state 32
-- On LEQ shift to state 95
-- On INT shift to state 36
-- On IF shift to state 37
-- On ID shift to state 38
-- On HEAD shift to state 39
-- On GT shift to state 97
-- On GEQ shift to state 99
-- On FUN shift to state 40
-- On EQ shift to state 101
-- On DIV shift to state 103
-- On CONCAT shift to state 105
-- On CAT shift to state 107
-- On BOOL shift to state 43
-- On APPEND shift to state 109
-- On AND shift to state 111
-- On ADD shift to state 113
-- On simple_expr shift to state 44
-- On expr shift to state 118
-- On app_expr shift to state 60
## Reductions:

State 18:
## Known stack suffix:
## L_PAR SUB
## LR(1) items:
expr -> SUB . expr [ SUB SEMICOLON R_PAR OR NEQ MUL MOD LT LEQ GT GEQ EQ DIV CONCAT CAT APPEND AND ADD ]
simple_expr -> L_PAR SUB . R_PAR [ THEN TAIL SUB STRING SEMICOLON R_SQ R_PAR PRINT OR NOT NEQ NEG MUL MOD L_SQ L_PAR LT LET LEQ INT IN ID HEAD GT GEQ EQ EOF ELSE DIV CONCAT CAT BOOL APPEND AND ADD ]
## Transitions:
-- On TAIL shift to state 8
-- On SUB shift to state 9
-- On STRING shift to state 10
-- On R_PAR shift to state 19
-- On PRINT shift to state 11
-- On NOT shift to state 12
-- On NEG shift to state 13
-- On L_SQ shift to state 14
-- On L_PAR shift to state 20
-- On LET shift to state 32
-- On INT shift to state 36
-- On IF shift to state 37
-- On ID shift to state 38
-- On HEAD shift to state 39
-- On FUN shift to state 40
-- On BOOL shift to state 43
-- On simple_expr shift to state 44
-- On expr shift to state 117
-- On app_expr shift to state 60
## Reductions:

State 19:
## Known stack suffix:
## L_PAR SUB R_PAR
## LR(1) items:
simple_expr -> L_PAR SUB R_PAR . [ THEN TAIL SUB STRING SEMICOLON R_SQ R_PAR PRINT OR NOT NEQ NEG MUL MOD L_SQ L_PAR LT LET LEQ INT IN ID HEAD GT GEQ EQ EOF ELSE DIV CONCAT CAT BOOL APPEND AND ADD ]
## Transitions:
## Reductions:
-- On THEN TAIL SUB STRING SEMICOLON R_SQ R_PAR PRINT OR NOT NEQ NEG MUL MOD L_SQ L_PAR LT LET LEQ INT IN ID HEAD GT GEQ EQ EOF ELSE DIV CONCAT CAT BOOL APPEND AND ADD
--   reduce production simple_expr -> L_PAR SUB R_PAR

State 20:
## Known stack suffix:
## L_PAR
## LR(1) items:
simple_expr -> L_PAR . ADD R_PAR [ THEN TAIL SUB STRING SEMICOLON R_PAR PRINT OR NOT NEQ NEG MUL MOD L_SQ L_PAR LT LET LEQ INT IN ID HEAD GT GEQ EQ EOF ELSE DIV CONCAT CAT BOOL APPEND AND ADD ]
simple_expr -> L_PAR . SUB R_PAR [ THEN TAIL SUB STRING SEMICOLON R_PAR PRINT OR NOT NEQ NEG MUL MOD L_SQ L_PAR LT LET LEQ INT IN ID HEAD GT GEQ EQ EOF ELSE DIV CONCAT CAT BOOL APPEND AND ADD ]
simple_expr -> L_PAR . MUL R_PAR [ THEN TAIL SUB STRING SEMICOLON R_PAR PRINT OR NOT NEQ NEG MUL MOD L_SQ L_PAR LT LET LEQ INT IN ID HEAD GT GEQ EQ EOF ELSE DIV CONCAT CAT BOOL APPEND AND ADD ]
simple_expr -> L_PAR . DIV R_PAR [ THEN TAIL SUB STRING SEMICOLON R_PAR PRINT OR NOT NEQ NEG MUL MOD L_SQ L_PAR LT LET LEQ INT IN ID HEAD GT GEQ EQ EOF ELSE DIV CONCAT CAT BOOL APPEND AND ADD ]
simple_expr -> L_PAR . MOD R_PAR [ THEN TAIL SUB STRING SEMICOLON R_PAR PRINT OR NOT NEQ NEG MUL MOD L_SQ L_PAR LT LET LEQ INT IN ID HEAD GT GEQ EQ EOF ELSE DIV CONCAT CAT BOOL APPEND AND ADD ]
simple_expr -> L_PAR . AND R_PAR [ THEN TAIL SUB STRING SEMICOLON R_PAR PRINT OR NOT NEQ NEG MUL MOD L_SQ L_PAR LT LET LEQ INT IN ID HEAD GT GEQ EQ EOF ELSE DIV CONCAT CAT BOOL APPEND AND ADD ]
simple_expr -> L_PAR . OR R_PAR [ THEN TAIL SUB STRING SEMICOLON R_PAR PRINT OR NOT NEQ NEG MUL MOD L_SQ L_PAR LT LET LEQ INT IN ID HEAD GT GEQ EQ EOF ELSE DIV CONCAT CAT BOOL APPEND AND ADD ]
simple_expr -> L_PAR . EQ R_PAR [ THEN TAIL SUB STRING SEMICOLON R_PAR PRINT OR NOT NEQ NEG MUL MOD L_SQ L_PAR LT LET LEQ INT IN ID HEAD GT GEQ EQ EOF ELSE DIV CONCAT CAT BOOL APPEND AND ADD ]
simple_expr -> L_PAR . NEQ R_PAR [ THEN TAIL SUB STRING SEMICOLON R_PAR PRINT OR NOT NEQ NEG MUL MOD L_SQ L_PAR LT LET LEQ INT IN ID HEAD GT GEQ EQ EOF ELSE DIV CONCAT CAT BOOL APPEND AND ADD ]
simple_expr -> L_PAR . LT R_PAR [ THEN TAIL SUB STRING SEMICOLON R_PAR PRINT OR NOT NEQ NEG MUL MOD L_SQ L_PAR LT LET LEQ INT IN ID HEAD GT GEQ EQ EOF ELSE DIV CONCAT CAT BOOL APPEND AND ADD ]
simple_expr -> L_PAR . GT R_PAR [ THEN TAIL SUB STRING SEMICOLON R_PAR PRINT OR NOT NEQ NEG MUL MOD L_SQ L_PAR LT LET LEQ INT IN ID HEAD GT GEQ EQ EOF ELSE DIV CONCAT CAT BOOL APPEND AND ADD ]
simple_expr -> L_PAR . LEQ R_PAR [ THEN TAIL SUB STRING SEMICOLON R_PAR PRINT OR NOT NEQ NEG MUL MOD L_SQ L_PAR LT LET LEQ INT IN ID HEAD GT GEQ EQ EOF ELSE DIV CONCAT CAT BOOL APPEND AND ADD ]
simple_expr -> L_PAR . GEQ R_PAR [ THEN TAIL SUB STRING SEMICOLON R_PAR PRINT OR NOT NEQ NEG MUL MOD L_SQ L_PAR LT LET LEQ INT IN ID HEAD GT GEQ EQ EOF ELSE DIV CONCAT CAT BOOL APPEND AND ADD ]
simple_expr -> L_PAR . CONCAT R_PAR [ THEN TAIL SUB STRING SEMICOLON R_PAR PRINT OR NOT NEQ NEG MUL MOD L_SQ L_PAR LT LET LEQ INT IN ID HEAD GT GEQ EQ EOF ELSE DIV CONCAT CAT BOOL APPEND AND ADD ]
simple_expr -> L_PAR . CAT R_PAR [ THEN TAIL SUB STRING SEMICOLON R_PAR PRINT OR NOT NEQ NEG MUL MOD L_SQ L_PAR LT LET LEQ INT IN ID HEAD GT GEQ EQ EOF ELSE DIV CONCAT CAT BOOL APPEND AND ADD ]
simple_expr -> L_PAR . APPEND R_PAR [ THEN TAIL SUB STRING SEMICOLON R_PAR PRINT OR NOT NEQ NEG MUL MOD L_SQ L_PAR LT LET LEQ INT IN ID HEAD GT GEQ EQ EOF ELSE DIV CONCAT CAT BOOL APPEND AND ADD ]
simple_expr -> L_PAR . R_PAR [ THEN TAIL SUB STRING SEMICOLON R_PAR PRINT OR NOT NEQ NEG MUL MOD L_SQ L_PAR LT LET LEQ INT IN ID HEAD GT GEQ EQ EOF ELSE DIV CONCAT CAT BOOL APPEND AND ADD ]
simple_expr -> L_PAR . expr R_PAR [ THEN TAIL SUB STRING SEMICOLON R_PAR PRINT OR NOT NEQ NEG MUL MOD L_SQ L_PAR LT LET LEQ INT IN ID HEAD GT GEQ EQ EOF ELSE DIV CONCAT CAT BOOL APPEND AND ADD ]
## Transitions:
-- On TAIL shift to state 8
-- On SUB shift to state 18
-- On STRING shift to state 10
-- On R_PAR shift to state 21
-- On PRINT shift to state 11
-- On OR shift to state 22
-- On NOT shift to state 12
-- On NEQ shift to state 24
-- On NEG shift to state 13
-- On MUL shift to state 26
-- On MOD shift to state 28
-- On L_SQ shift to state 14
-- On L_PAR shift to state 20
-- On LT shift to state 30
-- On LET shift to state 32
-- On LEQ shift to state 95
-- On INT shift to state 36
-- On IF shift to state 37
-- On ID shift to state 38
-- On HEAD shift to state 39
-- On GT shift to state 97
-- On GEQ shift to state 99
-- On FUN shift to state 40
-- On EQ shift to state 101
-- On DIV shift to state 103
-- On CONCAT shift to state 105
-- On CAT shift to state 107
-- On BOOL shift to state 43
-- On APPEND shift to state 109
-- On AND shift to state 111
-- On ADD shift to state 113
-- On simple_expr shift to state 44
-- On expr shift to state 115
-- On app_expr shift to state 60
## Reductions:

State 21:
## Known stack suffix:
## L_PAR R_PAR
## LR(1) items:
simple_expr -> L_PAR R_PAR . [ THEN TAIL SUB STRING SEMICOLON R_SQ R_PAR PRINT OR NOT NEQ NEG MUL MOD L_SQ L_PAR LT LET LEQ INT IN ID HEAD GT GEQ EQ EOF ELSE DIV CONCAT CAT BOOL APPEND AND ADD ]
## Transitions:
## Reductions:
-- On THEN TAIL SUB STRING SEMICOLON R_SQ R_PAR PRINT OR NOT NEQ NEG MUL MOD L_SQ L_PAR LT LET LEQ INT IN ID HEAD GT GEQ EQ EOF ELSE DIV CONCAT CAT BOOL APPEND AND ADD
--   reduce production simple_expr -> L_PAR R_PAR

State 22:
## Known stack suffix:
## L_PAR OR
## LR(1) items:
simple_expr -> L_PAR OR . R_PAR [ THEN TAIL SUB STRING SEMICOLON R_SQ R_PAR PRINT OR NOT NEQ NEG MUL MOD L_SQ L_PAR LT LET LEQ INT IN ID HEAD GT GEQ EQ EOF ELSE DIV CONCAT CAT BOOL APPEND AND ADD ]
## Transitions:
-- On R_PAR shift to state 23
## Reductions:

State 23:
## Known stack suffix:
## L_PAR OR R_PAR
## LR(1) items:
simple_expr -> L_PAR OR R_PAR . [ THEN TAIL SUB STRING SEMICOLON R_SQ R_PAR PRINT OR NOT NEQ NEG MUL MOD L_SQ L_PAR LT LET LEQ INT IN ID HEAD GT GEQ EQ EOF ELSE DIV CONCAT CAT BOOL APPEND AND ADD ]
## Transitions:
## Reductions:
-- On THEN TAIL SUB STRING SEMICOLON R_SQ R_PAR PRINT OR NOT NEQ NEG MUL MOD L_SQ L_PAR LT LET LEQ INT IN ID HEAD GT GEQ EQ EOF ELSE DIV CONCAT CAT BOOL APPEND AND ADD
--   reduce production simple_expr -> L_PAR OR R_PAR

State 24:
## Known stack suffix:
## L_PAR NEQ
## LR(1) items:
simple_expr -> L_PAR NEQ . R_PAR [ THEN TAIL SUB STRING SEMICOLON R_SQ R_PAR PRINT OR NOT NEQ NEG MUL MOD L_SQ L_PAR LT LET LEQ INT IN ID HEAD GT GEQ EQ EOF ELSE DIV CONCAT CAT BOOL APPEND AND ADD ]
## Transitions:
-- On R_PAR shift to state 25
## Reductions:

State 25:
## Known stack suffix:
## L_PAR NEQ R_PAR
## LR(1) items:
simple_expr -> L_PAR NEQ R_PAR . [ THEN TAIL SUB STRING SEMICOLON R_SQ R_PAR PRINT OR NOT NEQ NEG MUL MOD L_SQ L_PAR LT LET LEQ INT IN ID HEAD GT GEQ EQ EOF ELSE DIV CONCAT CAT BOOL APPEND AND ADD ]
## Transitions:
## Reductions:
-- On THEN TAIL SUB STRING SEMICOLON R_SQ R_PAR PRINT OR NOT NEQ NEG MUL MOD L_SQ L_PAR LT LET LEQ INT IN ID HEAD GT GEQ EQ EOF ELSE DIV CONCAT CAT BOOL APPEND AND ADD
--   reduce production simple_expr -> L_PAR NEQ R_PAR

State 26:
## Known stack suffix:
## L_PAR MUL
## LR(1) items:
simple_expr -> L_PAR MUL . R_PAR [ THEN TAIL SUB STRING SEMICOLON R_SQ R_PAR PRINT OR NOT NEQ NEG MUL MOD L_SQ L_PAR LT LET LEQ INT IN ID HEAD GT GEQ EQ EOF ELSE DIV CONCAT CAT BOOL APPEND AND ADD ]
## Transitions:
-- On R_PAR shift to state 27
## Reductions:

State 27:
## Known stack suffix:
## L_PAR MUL R_PAR
## LR(1) items:
simple_expr -> L_PAR MUL R_PAR . [ THEN TAIL SUB STRING SEMICOLON R_SQ R_PAR PRINT OR NOT NEQ NEG MUL MOD L_SQ L_PAR LT LET LEQ INT IN ID HEAD GT GEQ EQ EOF ELSE DIV CONCAT CAT BOOL APPEND AND ADD ]
## Transitions:
## Reductions:
-- On THEN TAIL SUB STRING SEMICOLON R_SQ R_PAR PRINT OR NOT NEQ NEG MUL MOD L_SQ L_PAR LT LET LEQ INT IN ID HEAD GT GEQ EQ EOF ELSE DIV CONCAT CAT BOOL APPEND AND ADD
--   reduce production simple_expr -> L_PAR MUL R_PAR

State 28:
## Known stack suffix:
## L_PAR MOD
## LR(1) items:
simple_expr -> L_PAR MOD . R_PAR [ THEN TAIL SUB STRING SEMICOLON R_SQ R_PAR PRINT OR NOT NEQ NEG MUL MOD L_SQ L_PAR LT LET LEQ INT IN ID HEAD GT GEQ EQ EOF ELSE DIV CONCAT CAT BOOL APPEND AND ADD ]
## Transitions:
-- On R_PAR shift to state 29
## Reductions:

State 29:
## Known stack suffix:
## L_PAR MOD R_PAR
## LR(1) items:
simple_expr -> L_PAR MOD R_PAR . [ THEN TAIL SUB STRING SEMICOLON R_SQ R_PAR PRINT OR NOT NEQ NEG MUL MOD L_SQ L_PAR LT LET LEQ INT IN ID HEAD GT GEQ EQ EOF ELSE DIV CONCAT CAT BOOL APPEND AND ADD ]
## Transitions:
## Reductions:
-- On THEN TAIL SUB STRING SEMICOLON R_SQ R_PAR PRINT OR NOT NEQ NEG MUL MOD L_SQ L_PAR LT LET LEQ INT IN ID HEAD GT GEQ EQ EOF ELSE DIV CONCAT CAT BOOL APPEND AND ADD
--   reduce production simple_expr -> L_PAR MOD R_PAR

State 30:
## Known stack suffix:
## L_PAR LT
## LR(1) items:
simple_expr -> L_PAR LT . R_PAR [ THEN TAIL SUB STRING SEMICOLON R_SQ R_PAR PRINT OR NOT NEQ NEG MUL MOD L_SQ L_PAR LT LET LEQ INT IN ID HEAD GT GEQ EQ EOF ELSE DIV CONCAT CAT BOOL APPEND AND ADD ]
## Transitions:
-- On R_PAR shift to state 31
## Reductions:

State 31:
## Known stack suffix:
## L_PAR LT R_PAR
## LR(1) items:
simple_expr -> L_PAR LT R_PAR . [ THEN TAIL SUB STRING SEMICOLON R_SQ R_PAR PRINT OR NOT NEQ NEG MUL MOD L_SQ L_PAR LT LET LEQ INT IN ID HEAD GT GEQ EQ EOF ELSE DIV CONCAT CAT BOOL APPEND AND ADD ]
## Transitions:
## Reductions:
-- On THEN TAIL SUB STRING SEMICOLON R_SQ R_PAR PRINT OR NOT NEQ NEG MUL MOD L_SQ L_PAR LT LET LEQ INT IN ID HEAD GT GEQ EQ EOF ELSE DIV CONCAT CAT BOOL APPEND AND ADD
--   reduce production simple_expr -> L_PAR LT R_PAR

State 32:
## Known stack suffix:
## LET
## LR(1) items:
expr -> LET . ID EQ expr IN expr [ THEN SUB SEMICOLON R_PAR OR NEQ MUL MOD LT LET LEQ IN GT GEQ EQ EOF ELSE DIV CONCAT CAT APPEND AND ADD ]
expr -> LET . REC ID EQ expr IN expr [ THEN SUB SEMICOLON R_PAR OR NEQ MUL MOD LT LET LEQ IN GT GEQ EQ EOF ELSE DIV CONCAT CAT APPEND AND ADD ]
## Transitions:
-- On REC shift to state 33
-- On ID shift to state 90
## Reductions:

State 33:
## Known stack suffix:
## LET REC
## LR(1) items:
expr -> LET REC . ID EQ expr IN expr [ THEN SUB SEMICOLON R_PAR OR NEQ MUL MOD LT LET LEQ IN GT GEQ EQ EOF ELSE DIV CONCAT CAT APPEND AND ADD ]
## Transitions:
-- On ID shift to state 34
## Reductions:

State 34:
## Known stack suffix:
## LET REC ID
## LR(1) items:
expr -> LET REC ID . EQ expr IN expr [ THEN SUB SEMICOLON R_PAR OR NEQ MUL MOD LT LET LEQ IN GT GEQ EQ EOF ELSE DIV CONCAT CAT APPEND AND ADD ]
## Transitions:
-- On EQ shift to state 35
## Reductions:
